--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">Hista</string>
 
+    <string name="app_name_location">Hista Location</string>
+
+<!--    Activity Name-->
+    <string name="find_friend_activity">Find Friends</string>
+
     <!--    @menu/top_app_bar-->
     <string name="favorite">Favorite</string>
     <string name="description_favorite">Description Favorite</string>
@@ -8,6 +13,10 @@
     <string name="description_more">Description More</string>
     <string name="search">Search</string>
     <string name="description_search">Description Search</string>
+
+<!--    Default Text-->
+    <string name="default_name">User name</string>
+    <string name="default_status">User status</string>
 
     <!--    Hint-->
     <string name="username">Username</string>
@@ -47,6 +56,8 @@
     <string name="login_with">or login with</string>
     <string name="already_has_acc">Already have an account?</string>
     <string name="profile_status">Profile Status</string>
+
+    <string name="google_map_api_key">AIzaSyC7nRzsi-mdqgOy7AaUlgaifeGc2VrFsd8</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
