--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name_location">Hista Location</string>
 
-<!--    Activity Name-->
+    <!--    Activity Name-->
     <string name="find_friend_activity">Find Friends</string>
 
     <!--    @menu/top_app_bar-->
@@ -14,17 +14,20 @@
     <string name="search">Search</string>
     <string name="description_search">Description Search</string>
 
-<!--    Default Text-->
+    <!--    Default Text-->
     <string name="default_name">User name</string>
     <string name="default_status">User status</string>
+    <string name="last_seen">Last seen</string>
 
     <!--    Hint-->
     <string name="username">Username</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="write_sth">Write something...</string>
+    <string name="write_msg">Type message here...</string>
     <string name="phone_hint">Phone number</string>
     <string name="verification">Input number</string>
+
 
     <!--    Profile Strings-->
     <string name="my_profile">My Profile</string>
@@ -40,6 +43,9 @@
     <string name="update_profile">Update</string>
     <string name="send_code">Send verification code</string>
     <string name="verify_code">Verify</string>
+    <string name="send_message">Send Message</string>
+    <string name="cancel_request">Cancel Request</string>
+
 
     <!--    menu-->
     <string name="find_fri_menu">Find Friends</string>
